crates/service/tests/diagnostics/snapshots/features__diagnostics__mem_arg__multiple_align.snap
---
source: crates/service/tests/diagnostics/mem_arg.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 2,
          "character": 27
        },
        "end": {
          "line": 2,
          "character": 34
        }
      },
      "severity": 1,
      "code": "mem-arg",
      "source": "wat",
      "message": "multiple alignments are not allowed"
    }
  ]
}
